--- a/package.json
+++ b/package.json
@@ -3,12 +3,14 @@
   "version": "1.0.0",
   "Dependencies": {
     "jquery": "^3.2.1",
-    "bootstrap": "^3.3.7"
+    "bootstrap-sass": "3.3.7"
   },
   "devDependencies": {
+    "bootstrap-sass": "^3.3.7",
     "css-loader": "^0.28.1",
     "extract-text-webpack-plugin": "^2.1.0",
     "file-loader": "^0.11.1",
+    "jquery.easing": "^1.4.1",
     "node-sass": "^4.5.3",
     "resolve-url-loader": "^2.0.2",
     "sass-loader": "^6.0.5",
