--- a/package.json
+++ b/package.json
@@ -1,24 +1,22 @@
 {
   "name": "myproject",
   "version": "1.0.0",
-  "Dependencies": {
-    "jquery": "^3.2.1",
-    "jquery.easing": "^1.4.1",
-    "bootstrap-sass": "3.3.7"
+  "dependencies": {
+    "jquery": "^3.2.1"
   },
   "devDependencies": {
     "babel": "^6.23.0",
     "babel-core": "^6.24.1",
     "babel-loader": "^7.0.0",
     "bootstrap-sass": "^3.3.7",
-    "css-loader": "^0.28.1",
+    "css-loader": "^0.28.2",
     "extract-text-webpack-plugin": "^2.1.0",
     "file-loader": "^0.11.1",
     "node-sass": "^4.5.3",
     "resolve-url-loader": "^2.0.2",
     "sass-loader": "^6.0.5",
-    "style-loader": "^0.17.0",
+    "style-loader": "^0.18.1",
     "url-loader": "^0.5.8",
-    "webpack": "^2.5.1"
+    "webpack": "^2.6.0"
   }
 }
