--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
   "name": "myproject",
   "version": "1.0.0",
-  "dependencies": {
-    "jquery": "^3.2.1"
+  "Dependencies": {
+    "jquery": "^3.2.1",
+    "bootstrap": "^3.3.7"
   },
   "devDependencies": {
     "babel": "^6.23.0",
@@ -13,9 +14,11 @@
     "extract-text-webpack-plugin": "^2.1.0",
     "file-loader": "^0.11.1",
     "node-sass": "^4.5.3",
+    "optimize-css-assets-webpack-plugin": "^1.3.2",
     "resolve-url-loader": "^2.0.2",
     "sass-loader": "^6.0.5",
     "style-loader": "^0.18.1",
+    "uglifyjs-webpack-plugin": "^0.4.3",
     "url-loader": "^0.5.8",
     "webpack": "^2.6.0"
   }
